# egui-protomatrix

./: Cargo.toml  README.md  board.json  index.html
.github/workflows/: deploy-pages.yml
Log/: cursor_egui_app_with_canvas_and_panning.md  kicad9_footprint_library_design.md
src/: footprint.rs  main.rs  protomatrix.rs  router.rs
src/kicad9/: data.rs  error.rs  mod.rs  parse.rs  sexp.rs
