[package]
name = "egui-protomatrix"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"
egui = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document", "Window", "Element", "HtmlCanvasElement",
    "HtmlInputElement", "FileList", "File", "FileReader",
    "Blob", "Url", "HtmlAnchorElement", "Event", "EventTarget", "ProgressEvent",
] }
js-sys = "0.3"